<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_window3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">
        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="55dp"
            android:text="@string/creadit"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            ></TextView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="-355dp"
            android:background="@color/green">
        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/slider_background">
            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:text="@string/sumcredit"
                android:textColor="@color/black"
                android:textSize ="18sp"
                android:textStyle="bold"></TextView>
        </FrameLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="115dp"
                android:background="@drawable/edittext1"
                android:hint="@string/srokcredite"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textAlignment="center"></androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="270dp"
                android:layout_height="68dp"
                android:layout_marginTop="230dp"
                android:layout_marginLeft="65dp"
                android:background="@drawable/edittext1"
                android:hint="@string/ved2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"></androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="375dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/buttonreg"
                android:text= "@string/registr"
                android:textColor="@color/white"
                android:textSize="24sp"></androidx.appcompat.widget.AppCompatButton>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>