<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="55dp"
            android:text="@string/registr"
            android:textColor="@color/green"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            ></TextView>
        <ImageView
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:layout_marginLeft="-356dp"
            android:src="@drawable/image"></ImageView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="-79dp"
            android:background="@color/green">
            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="55dp"
                android:text = "@string/registr2"
                android:textColor="@color/black"
                android:textSize = "15sp"></TextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLogin"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="120dp"
                android:hint="@string/login"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:backgroundTint="@color/black"></androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="190dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:backgroundTint="@color/black"></androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="355dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/buttonreg"
                android:text= "@string/voity"
                android:textColor="@color/white"
                android:textSize="24sp"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>